# Alloc-AI

./: .gitignore  Dockerfile  README.md  setup.sh
docs/:  CODE_FLOW.md  QDRANT_RAG.md  RISK_REPORT_FLOW.md  SOLVED_ISSUES.md  UNSOLVED_ISSUES.md
pdf/: __init__.py  main.py  pdf_to_text.py  pyproject.toml
pdf/controller/: routes.py
pdf/service/: pdf_service.py
rag/: pyproject.toml
rag/src/: __init__.py  config.py  main.py
rag/src/application/: acl.py  ingestion_service.py  prompt_builder.py  rag_service.py  risk_report_parser.py  risk_report_prompt_builder.py  risk_report_retriever.py  risk_report_service.py  safety.py  weekly_report_service.py
rag/src/domain/: models.py  ports.py
rag/src/infrastructure/: llm_client.py  mariadb_repo.py  opensearch_store.py  qdrant_store.py  redis_cache.py  reranker.py
rag/src/infrastructure/ingestion/: chunk.py  docs_loader.py  embed.py  index.py
rag/src/interface/api/: deps.py  routes.py  schemas.py
rag/src/rag.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: seed_metadata.sql  test_pdf_extract.py  test_risk_report.py  test_risk_report_detail.py  test_risk_report_list.py
