[project]
name = "rag"
version = "0.1.0"
description = "RAG service architecture skeleton"
requires-python = ">=3.10"
dependencies = [
  "fastapi>=0.110",
  "uvicorn>=0.27",
  "pydantic>=2.6",
  "pydantic-settings>=2.2",
]

[project.scripts]
rag-api = "main:run"

[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"
